samples/_failures_safe/1761219700_ab8342_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5dbdb830.c: In function ‘main’:
./samples/SAFE/__tmp_5dbdb830.c:140: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_5dbdb830.c:139:5: error: expected declaration or statement at end of input
  139 |     if
      |     ^~
